docs: record 2026-08-22 Ubuntu VM runtime validation across recovery phases
Phase 1 preflight PASS with installed toolchain versions and the two
contract reconciliations (web tree restore, Android lineage alignment).
Phase 2 staging runbook executed: authenticated loopback-only MongoDB,
protected env file, staged build, systemd service, version/space probes
plus restart test, and the stage-CWD absolute-path note. Phase 3 suites
green (5/6 default, 18/18 opt-in) with disposable-database isolation and
corrected runbook requirements (env substitutions, JDK module flags).
Phase 4 executed: full-runtime asset staging fix, JDK 17 Assets export
flag, all routes 200. Backend track recorded: D-05 bootstrap, D-10
backup timer, tiler E2E with R-10 link contract, URL audit, R-09 header
fix verified live, secret scan, outstanding-items table.